Embed album covers in html as encoded strings to get around KHtmlView's caching.

BUG: 130518


svn path=/trunk/extragear/multimedia/amarok/; revision=624268